# thoth-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: datasources.docker.yaml  datasources.yaml
docker/mysql/: init.sql
docker/postgres/: init.sql
docker/redis/: seed.redis
scripts/: run_integration_tests.sh
src/thoth_mcp/: __init__.py  __main__.py  config.py  server.py
src/thoth_mcp/db/: __init__.py  mysql.py  postgresql.py  redis.py
src/thoth_mcp/tools/: __init__.py  discovery.py  mysql.py  postgresql.py  redis.py
src/thoth_mcp/utils/: formatters.py  logger.py  redis_safety.py  safe_sql.py
tests/: conftest.py  test_config.py  test_e2e_integration.py  test_formatters.py  test_logger.py  test_mysql_pool.py  test_mysql_tools.py  test_postgresql_pool.py  test_postgresql_tools.py  test_redis_discovery_tools.py  test_redis_pool.py  test_redis_safety.py  test_safe_sql.py  test_server.py
