[project]
name = "thoth-mcp"
version = "0.1.0"
description = "A secure, read-only MCP server for querying MySQL, PostgreSQL, and Redis datasources"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.6.0",
    "fastmcp>=2.3.0",
    "starlette>=0.37.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.14.0",
    "pyyaml>=6.0.3",
    "loguru>=0.7.3",
    "sqlparse>=0.5.0",
    "aiomysql>=0.2.0",
    "redis[hiredis]>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/pennxiv/thoth-mcp"
Issues = "https://github.com/pennxiv/thoth-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thoth_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"

